--- a/package.json
+++ b/package.json
@@ -21,17 +21,24 @@
     "include-all": "~0.1.3",
     "rc": "~0.5.0",
     "sails": "~0.11.0",
-    "sails-disk": "~0.10.0"
+    "sails-disk": "~0.10.0",
+    "sails-mongo": "^0.11.5"
   },
   "scripts": {
     "debug": "node debug app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "make test"
   },
   "main": "app.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/sonny/deudamx-api.git"
+    "url": "git://github.com/spaceship-labs/deudamx-api.git"
   },
   "author": "sonny",
-  "license": ""
+  "license": "",
+  "devDependencies": {
+    "istanbul": "^0.4.1",
+    "sails-hook-autoreload": "^0.12.0",
+    "sails-test-helper": "^0.5.0"
+  }
 }
