--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "a Sails application",
   "keywords": [],
   "dependencies": {
+    "csv-parse": "^1.0.1",
     "ejs": "~0.8.4",
+    "fs": "0.0.2",
     "grunt": "0.4.2",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-coffee": "~0.10.1",
@@ -19,6 +21,7 @@
     "grunt-sails-linker": "~0.9.5",
     "grunt-sync": "~0.0.4",
     "include-all": "~0.1.3",
+    "q": "^1.4.1",
     "rc": "~0.5.0",
     "sails": "~0.11.0",
     "sails-disk": "~0.10.0",
@@ -27,7 +30,7 @@
   "scripts": {
     "debug": "node debug app.js",
     "start": "node app.js",
-    "test": "make test"
+    "test": "istanbul cover -x 'api/responses/* api/policies/*' _mocha -- test/helpers/bootstrap.js test/unit/**/*.test.js --recursive -t 30000 -R spec"
   },
   "main": "app.js",
   "repository": {
@@ -37,8 +40,9 @@
   "author": "sonny",
   "license": "",
   "devDependencies": {
+    "chai-things": "^0.2.0",
     "istanbul": "^0.4.1",
     "sails-hook-autoreload": "^0.12.0",
-    "sails-test-helper": "^0.5.0"
+    "sails-test-helper": "^0.4.4"
   }
 }
