--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "csv-parse": "^1.0.1",
     "ejs": "~0.8.4",
     "fs": "0.0.2",
+    "gauss": "^0.2.12",
     "grunt": "0.4.2",
     "grunt-contrib-clean": "~0.5.0",
     "grunt-contrib-coffee": "~0.10.1",
