--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "include-all": "~0.1.3",
     "q": "^1.4.1",
     "rc": "~0.5.0",
+    "regression": "^1.2.1",
     "sails": "~0.11.0",
     "sails-disk": "~0.10.0",
     "sails-mongo": "^0.11.5"
@@ -43,6 +44,7 @@
   "devDependencies": {
     "chai-things": "^0.2.0",
     "istanbul": "^0.4.1",
+    "karma": "^0.13.21",
     "sails-hook-autoreload": "^0.12.0",
     "sails-test-helper": "^0.4.4"
   }
