--- a/package.json
+++ b/package.json
@@ -43,8 +43,11 @@
   "license": "",
   "devDependencies": {
     "chai-things": "^0.2.0",
+    "grunt-karma": "^0.12.1",
     "istanbul": "^0.4.1",
     "karma": "^0.13.21",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "phantomjs-prebuilt": "^2.1.4",
     "sails-hook-autoreload": "^0.12.0",
     "sails-test-helper": "^0.4.4"
   }
